step 05: JSON parsing + test